# Grab

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  auth_setup.md  dev.md  media.md  reviews.md  sources.md  technical_plan.md  troubleshooting.md
src/grab/: __init__.py  cli.py  config.py
src/grab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/grab/core/db/: __init__.py  migrations.py  repository.py
src/grab/core/dedupe/: __init__.py  keys.py
src/grab/core/logging/: __init__.py  setup.py
src/grab/core/media/: __init__.py  manager.py
src/grab/core/normalize/: __init__.py  models.py
src/grab/core/reviews/: __init__.py  service.py
src/grab/parsers/: __init__.py  aliexpress_parser.py  email_parser.py  utils.py
src/grab/services/: __init__.py  doctor.py  exporter.py  sync.py
src/grab/sources/: __init__.py  models.py
src/grab/sources/aliexpress/: __init__.py
src/grab/sources/auchan/: __init__.py
src/grab/sources/dns/: __init__.py
src/grab/sources/email_gmail/: __init__.py  auth.py  source.py
src/grab/sources/email_imap/: __init__.py  source.py
src/grab/sources/megamarket/: __init__.py
src/grab/sources/ozon/: __init__.py
src/grab/sources/wildberries/: __init__.py
src/grab/sources/yamarket/: __init__.py
tests/: conftest.py  test_config.py  test_db_upsert.py  test_dedupe.py  test_media_manager.py  test_parsers.py  test_sync_integration.py
tests/fixtures/emails/: aliexpress.txt  ozon.txt  wildberries.txt  yamarket.txt
(+1 files in other folders)
